--- a/css/style.css
+++ b/css/style.css
@@ -355,9 +355,10 @@ a:focus {
 
 .slider_section .slider_bg_box img {
   width: auto;
-  height: auto;
+  height: 100%;
   min-width: 100%;
   min-height: 100%;
+  object-fit: cover;
 }
 
 .slider_section .slider_bg_box::before {
